[package]
name = "ricecoder-cache"
version = "0.1.0"
edition = "2021"
description = "Multi-level caching infrastructure for RiceCoder"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["fs", "io-util", "sync", "time", "macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Domain dependencies
ricecoder-domain = { path = "../ricecoder-domain" }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"