[package]
name = "ricecoder-cache"
version = "0.1.0"
edition = "2021"
description = "Multi-level caching infrastructure for RiceCoder"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "io-util", "sync", "time", "macros", "rt-multi-thread"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true, features = ["serde"] }

# Error handling
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Compression
flate2 = { workspace = true }

# Domain dependencies
ricecoder-domain = { workspace = true }

# DI registration (via ricecoder-common to avoid circular deps)
ricecoder-common = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }
proptest = { workspace = true }