[package]
name = "ricecoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["ai", "coding", "assistant", "cli", "spec-driven"]
categories = ["command-line-utilities", "development-tools"]
description = "Terminal-first, spec-driven coding assistant that understands your project before generating code"

[[bin]]
name = "rice"
path = "src/main.rs"

[lib]
name = "ricecoder_cli"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.4"
colored = { workspace = true }
indicatif = { workspace = true }
rustyline = { workspace = true }
syntect = { workspace = true }
dirs = { workspace = true }
term_size = { workspace = true }
atty = "0.2"
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }
ricecoder-commands = { path = "../ricecoder-commands", version = "0.1" }
ricecoder-tui = { path = "../ricecoder-tui", version = "0.1" }
ricecoder-lsp = { path = "../ricecoder-lsp", version = "0.1" }
ricecoder-hooks = { path = "../ricecoder-hooks", version = "0.1" }
ricecoder-sessions = { path = "../ricecoder-sessions", version = "0.1" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }


