[package]
name = "ricecoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["ai", "coding", "assistant", "cli", "spec-driven"]
categories = ["command-line-utilities", "development-tools"]
description = "Terminal-first, spec-driven coding assistant that understands your project before generating code"

[[bin]]
name = "rice"
path = "src/main.rs"

[lib]
name = "ricecoder_cli"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4.4"
colored = { workspace = true }
indicatif = { workspace = true }
rustyline = { workspace = true }
syntect = { workspace = true }
dirs = { workspace = true }
term_size = { workspace = true }
atty = "0.2"
regex = { workspace = true }
ricecoder-agents = { path = "../ricecoder-agents", version = "0.1" }
ricecoder-di = { path = "../ricecoder-di", version = "0.1" }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
ricecoder-commands = { path = "../ricecoder-commands", version = "0.1" }
ricecoder-completion = { path = "../ricecoder-completion", version = "0.1" }
ricecoder-domain-agents = { path = "../ricecoder-domain-agents", version = "0.1" }
ricecoder-execution = { path = "../ricecoder-execution", version = "0.1" }
ricecoder-external-lsp = { path = "../ricecoder-external-lsp", version = "0.1" }
ricecoder-files = { path = "../ricecoder-files", version = "0.1" }
ricecoder-generation = { path = "../ricecoder-generation", version = "0.1" }
ricecoder-github = { path = "../ricecoder-github", version = "0.1" }
ricecoder-hooks = { path = "../ricecoder-hooks", version = "0.1" }
ricecoder-ide = { path = "../ricecoder-ide", version = "0.1" }
ricecoder-images = { path = "../ricecoder-images", version = "0.1" }
ricecoder-keybinds = { path = "../ricecoder-keybinds", version = "0.1" }
ricecoder-learning = { path = "../ricecoder-learning", version = "0.1" }
ricecoder-local-models = { path = "../ricecoder-local-models", version = "0.1" }
ricecoder-lsp = { path = "../ricecoder-lsp", version = "0.1" }
ricecoder-mcp = { path = "../ricecoder-mcp", version = "0.1" }
ricecoder-modes = { path = "../ricecoder-modes", version = "0.1" }
ricecoder-orchestration = { path = "../ricecoder-orchestration", version = "0.1" }
ricecoder-permissions = { path = "../ricecoder-permissions", version = "0.1" }
ricecoder-providers = { path = "../ricecoder-providers", version = "0.1" }
ricecoder-refactoring = { path = "../ricecoder-refactoring", version = "0.1" }
ricecoder-research = { path = "../ricecoder-research", version = "0.1" }
ricecoder-sessions = { path = "../ricecoder-sessions", version = "0.1" }
ricecoder-specs = { path = "../ricecoder-specs", version = "0.1" }
ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }
ricecoder-teams = { path = "../ricecoder-teams", version = "0.1" }
ricecoder-tools = { path = "../ricecoder-tools", version = "0.1" }
ricecoder-tui = { path = "../ricecoder-tui", version = "0.1" }
ricecoder-undo-redo = { path = "../ricecoder-undo-redo", version = "0.1" }
ricecoder-workflows = { path = "../ricecoder-workflows", version = "0.1" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }


