[package]
name = "ricecoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["ai", "coding", "assistant", "cli", "spec-driven"]
categories = ["command-line-utilities", "development-tools"]
description = "Terminal-first, spec-driven coding assistant that understands your project before generating code"
publish = true

[[bin]]
name = "rice"
path = "src/main.rs"

[lib]
name = "ricecoder_cli"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
rustyline = { workspace = true }
syntect = { workspace = true }
dirs = { workspace = true }
term_size = { workspace = true }
atty = { workspace = true }
regex = { workspace = true }
ricecoder-agents = { workspace = true }
ricecoder-di = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
ricecoder-commands = { workspace = true }
ricecoder-domain-agents = { workspace = true }
ricecoder-execution = { workspace = true }
ricecoder-external-lsp = { workspace = true }
ricecoder-files = { workspace = true }
ricecoder-generation = { workspace = true }
ricecoder-github = { workspace = true }
ricecoder-hooks = { workspace = true }
ricecoder-ide = { workspace = true }
async-trait = { workspace = true }
ricecoder-images = { workspace = true }
ricecoder-keybinds = { workspace = true }
ricecoder-learning = { workspace = true }
ricecoder-local-models = { workspace = true }
ricecoder-lsp = { workspace = true }
ricecoder-mcp = { workspace = true }
ricecoder-modes = { workspace = true }
ricecoder-orchestration = { workspace = true }
ricecoder-permissions = { workspace = true }
ricecoder-providers = { workspace = true }
ricecoder-refactoring = { workspace = true }
 ricecoder-research = { workspace = true }
 ricecoder-security = { workspace = true }
 ricecoder-sessions = { workspace = true }
ricecoder-specs = { workspace = true }
ricecoder-storage = { workspace = true }
ricecoder-teams = { workspace = true }
ricecoder-tools = { workspace = true }
ricecoder-tui = { workspace = true }
ricecoder-undo-redo = { workspace = true }
ricecoder-workflows = { workspace = true }

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }


