[package]
name = "ricecoder-commands"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Custom command system for RiceCoder"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_commands"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
lazy_static = "1.4"


