[package]
name = "ricecoder-common"
version.workspace = true
edition.workspace = true
description = "Shared utilities, traits, and macros for ricecoder crates"
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
parking_lot = { workspace = true }
inventory = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
