[package]
name = "ricecoder-completion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Code completion engine for RiceCoder with language-agnostic architecture"

[lib]
name = "ricecoder_completion"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
regex = { workspace = true }
chrono = { workspace = true }
ricecoder-storage = { path = "../ricecoder-storage" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
itertools = { workspace = true }
