[package]
name = "ricecoder-config"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Configuration management system for RiceCoder"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_config"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1.0"
tracing = "0.1"
tokio = { workspace = true }
anyhow = { workspace = true }
config = "0.14"
dirs = { workspace = true }
notify = "6.1"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"