[package]
name = "ricecoder-continuous-improvement"
version.workspace = true
edition.workspace = true
description = "Continuous improvement pipeline for RiceCoder"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
dashmap = "6.0"
parking_lot = "0.12"
once_cell = "1.19"
regex = { workspace = true }
url = { workspace = true }
 base64 = "0.22"
 aes-gcm = "0.10"
 rand = "0.8"
 semver = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
flate2 = "1.0"
tar = "0.4"
walkdir = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Internal dependencies
ricecoder-beta = { path = "../ricecoder-beta", version = "0.1" }
ricecoder-monitoring = { path = "../ricecoder-monitoring", version = "0.1" }
ricecoder-updates = { path = "../ricecoder-updates", version = "0.1" }
ricecoder-security = { path = "../ricecoder-security", version = "0.1" }
ricecoder-domain = { path = "../ricecoder-domain", version = "0.1" }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
mockito = { workspace = true }

[features]
default = []
test-utils = ["proptest", "tempfile"]