[package]
name = "ricecoder-continuous-improvement"
version.workspace = true
edition.workspace = true
description = "Continuous improvement pipeline for RiceCoder"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
dashmap = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
 base64 = { workspace = true }
 aes-gcm = { workspace = true }
 rand = { workspace = true }
 semver = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
rusqlite = { workspace = true, features = ["bundled"] }
csv = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
proptest = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Internal dependencies
ricecoder-beta = { workspace = true }
ricecoder-monitoring = { workspace = true }
ricecoder-updates = { workspace = true }
ricecoder-security = { workspace = true }
ricecoder-domain = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }
mockito = { workspace = true }

[features]
default = []
test-utils = ["proptest", "tempfile"]