[package]
name = "ricecoder-di"
description = "Dependency injection container for RiceCoder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

ricecoder-sessions = { workspace = true }
ricecoder-providers = { workspace = true }
ricecoder-agents = { workspace = true }
ricecoder-storage = { workspace = true, optional = true }
ricecoder-research = { workspace = true, optional = true }
ricecoder-workflows = { workspace = true, optional = true }
ricecoder-execution = { workspace = true, optional = true }
ricecoder-mcp = { workspace = true, optional = true }
ricecoder-tools = { workspace = true, optional = true }
ricecoder-config = { workspace = true, optional = true }
ricecoder-activity-log = { workspace = true, optional = true }
ricecoder-orchestration = { workspace = true, optional = true }
ricecoder-specs = { workspace = true, optional = true }
ricecoder-undo-redo = { workspace = true, optional = true }
ricecoder-vcs = { workspace = true, optional = true }
ricecoder-permissions = { workspace = true, optional = true }
ricecoder-security = { workspace = true, optional = true }
ricecoder-cache = { workspace = true, optional = true }
ricecoder-domain = { workspace = true, optional = true }
ricecoder-learning = { workspace = true, optional = true }
ricecoder-industry = { workspace = true, optional = true }
ricecoder-safety = { workspace = true, optional = true }
ricecoder-files = { workspace = true, optional = true }
ricecoder-themes = { workspace = true, optional = true }
ricecoder-images = { workspace = true, optional = true }

[features]
default = []
storage = ["ricecoder-storage"]
research = ["ricecoder-research"]
workflows = ["ricecoder-workflows"]
execution = ["ricecoder-execution"]
mcp = ["ricecoder-mcp"]
tools = ["ricecoder-tools"]
config = ["ricecoder-config"]
activity-log = ["ricecoder-activity-log"]
orchestration = ["ricecoder-orchestration"]
specs = ["ricecoder-specs"]
undo-redo = ["ricecoder-undo-redo"]
vcs = ["ricecoder-vcs"]
permissions = ["ricecoder-permissions"]
security = ["ricecoder-security"]
cache = ["ricecoder-cache"]
domain = ["ricecoder-domain"]
learning = ["ricecoder-learning"]
industry = ["ricecoder-industry"]
safety = ["ricecoder-safety"]
files = ["ricecoder-files"]
themes = ["ricecoder-themes"]
images = ["ricecoder-images"]
full = ["storage", "research", "workflows", "execution", "mcp", "tools", "config", "activity-log", "orchestration", "specs", "undo-redo", "vcs", "permissions", "security", "cache", "domain", "learning", "industry", "safety", "files", "themes", "images"]

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }