[package]
name = "ricecoder-domain-agents"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
futures.workspace = true
chrono.workspace = true
uuid.workspace = true

ricecoder-storage = { path = "../ricecoder-storage" }
ricecoder-agents = { path = "../ricecoder-agents" }
ricecoder-providers = { path = "../ricecoder-providers" }
jsonschema.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
