[package]
name = "ricecoder-domain-agents"
description = "Domain-specific agents for language and framework support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

ricecoder-storage = { workspace = true }
ricecoder-agents = { workspace = true }
ricecoder-providers = { workspace = true }
jsonschema = { workspace = true }

# DI registration (via ricecoder-common to avoid circular deps)
ricecoder-common = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }





