[package]
name = "ricecoder-domain"
version = "0.1.0"
edition = "2021"
description = "Core domain entities and business logic for RiceCoder"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5"
mime_guess = "2.0"
async-trait = "0.1"

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }