[package]
name = "ricecoder-domain"
version = "0.1.0"
edition = "2021"
description = "Core domain entities and business logic for RiceCoder"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
url = { workspace = true }
mime_guess = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }