[package]
name = "ricecoder-execution"
description = "Execution engine for workflows and agent tasks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

ricecoder-workflows = { path = "../ricecoder-workflows", version = "0.1" }
ricecoder-files = { path = "../ricecoder-files", version = "0.1" }
ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }





