[package]
name = "ricecoder-execution"
description = "Execution engine for workflows and agent tasks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

ricecoder-workflows = { workspace = true }
ricecoder-files = { workspace = true }
ricecoder-storage = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
regex = { workspace = true }
which = { workspace = true }

# Unix process group management
[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal", "process"] }

# DI registration (via ricecoder-common to avoid circular deps)
ricecoder-common = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }





