[package]
name = "ricecoder-external-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
description = "External Language Server Protocol (LSP) integration for RiceCoder"

[lib]
name = "ricecoder_external_lsp"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }
ricecoder-lsp = { path = "../ricecoder-lsp", version = "0.1" }
ricecoder-completion = { path = "../ricecoder-completion", version = "0.1" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
itertools = { workspace = true }




