[package]
name = "ricecoder-files"
description = "File system operations and management utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
tokio = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
git2 = "0.18"
similar = "2.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
fxhash = "0.2"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }



