[package]
name = "ricecoder-files"
description = "File system operations and management utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
fxhash = { workspace = true }
notify = { workspace = true }
async-trait = { workspace = true }

# Domain layer for port interfaces
ricecoder-domain = { workspace = true }

# DI registration (via ricecoder-common to avoid circular deps)
ricecoder-common = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }



