[package]
name = "ricecoder-generation"
description = "Code generation engine with template support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
handlebars = "5.0"
heck = "0.4"
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
chrono = { workspace = true }
ricecoder-specs = { path = "../ricecoder-specs", version = "0.1" }
ricecoder-providers = { path = "../ricecoder-providers", version = "0.1" }
ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
lazy_static = "1.4"





