[package]
name = "ricecoder-generation"
description = "Code generation engine with template support"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
handlebars = { workspace = true }
heck = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
futures = { workspace = true }
chrono = { workspace = true }
ricecoder-specs = { workspace = true }
ricecoder-providers = { workspace = true }
ricecoder-storage = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }





