[package]
name = "ricecoder-github"
description = "GitHub integration for repository operations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
octocrab = "0.32"
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = "1.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

ricecoder-storage = { path = "../ricecoder-storage", version = "0" }
ricecoder-files = { path = "../ricecoder-files", version = "0" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockito = { workspace = true }





