[package]
name = "ricecoder-help"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Help system and documentation for RiceCoder TUI"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_help"
path = "src/lib.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"